--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baidu_analytics: 31e5318a8b80cdf9f556c336e890f518
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://zhangxd.cn
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -73,7 +73,7 @@ search:
   field: post
   format: html
   limit: 10000
-  
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
