--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Simple Note
-subtitle:
-description: 不知之不知
+title: Simple Notes
+subtitle: 张旭东的个人网站 - Zhang XuDong's Personal Website
+description:
 author: 张旭东
 language: zh-Hans
 timezone:
