--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Simple Notes
 subtitle: 张旭东的个人网站 - Zhang XuDong's Personal Website
-description:
+description: <div style="text-indent:2em;">成就我们的恰恰就是那些不断重复做的事情。因此，优秀不是一种行为，而是一种习惯。<br/><div style="text-align:right">----亚里士多德</div></div>
 author: 张旭东
 language: zh-Hans
 timezone:
