--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -35,7 +35,7 @@ menu:
   categories: /categories
   tags: /tags
   archives: /archives
-  about: /about  
+  #about: /about  
   #sitemap: /sitemap.xml
   #commonweal: /404.html
 
