--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -130,7 +130,7 @@ font:
 social:
   #LinkLabel: Link
   GitHub: https://github.com/zhangxd1989
-  Stackoverflow: http://stackoverflow.com/users/4938486/zhangxudong
+  #Stackoverflow: http://stackoverflow.com/users/4938486/zhangxudong
   #Weibo: http://weibo.com/u/2802301025
   #Zhihu: https://www.zhihu.com/people/zhang-xu-dong-75
 
