--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -309,14 +309,14 @@ mathjax:
 # Make duoshuo show UA
 # user_id must NOT be null when admin_enable is true!
 # you can visit http://dev.duoshuo.com get duoshuo user id.
-duoshuo_info:
-  ua_enable: true
-  admin_enable: true
-  user_id: 11416145
-  admin_nickname: 博主
+# duoshuo_info:
+#   ua_enable: true
+#   admin_enable: true
+#   user_id: 11416145
+#   admin_nickname: 博主
 
 # 多说热评文章 true 或者 false
-duoshuo_hotartical: true
+#duoshuo_hotartical: true
 
 # Facebook SDK Support.
 # https://github.com/iissnan/hexo-theme-next/pull/410
