--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 面试题本
+title: 面试题集
 subtitle: Sheldon的题集 - Sheldon's Personal Website
 description: <div style="text-indent:2em;">成就我们的恰恰就是那些不断重复做的事情。因此，优秀不是一种行为，而是一种习惯。<br/><div style="text-align:right">----亚里士多德</div></div>
 author: Sheldon
